--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nlw-return-server",
+  "name": "nlw-return-feedget-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
